# Scraping-news-exercito

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
python-scraping-news-eb/: __main__.py  processaBancoDeDados.py  processarNoticias.py  template.sql
python-scraping-news-eb-/: __main__.py  obterNoticias.py  processaBancoDeDados.py  processarNoticias.py
python_scraping_news_eb/: BancoDeDados.py  Imagens.py  __main__.py  noticias.py  processaBancoDeDados.py  utils.py
