[tool.poetry]
name = "python-scraping-news-eb"
version = "0.1.0"
description = ""
authors = ["Maicom Ferreira <maicomferre3242@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
mysql-connector = "^2.2.9"
python-dotenv = "^1.0.1"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
